[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player/Assets/red hood itch free Copy-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Assets/run turnaround-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=4]
[ext_resource path="res://Player/Assets/cursor_smol.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.52213
height = 5.07492

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "MeleLight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 59, 60, 62 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "RangedHeavy"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31, 32, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_animation_finished"
} ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 24, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 27, 29, 31, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_animation_finished"
} ]
}

[sub_resource type="Animation" id=7]
length = 2.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowPlayer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.1, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.75 ), Vector2( 0.75, 0.5 ), Vector2( 1, 0.75 ), Vector2( 1, 0.75 ), Vector2( 0.75, 0.5 ), Vector2( 1, 0.75 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "MeleLight"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "ShootArrow"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
advance_condition = "isRunning"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
advance_condition = "isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
advance_condition = "shootArrow"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
advance_condition = "isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachine" id=15]
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( -849, -113 )
states/MeleLight/node = SubResource( 17 )
states/MeleLight/position = Vector2( -668, -113 )
states/Run/node = SubResource( 9 )
states/Run/position = Vector2( -849, -213 )
states/ShootArrow/node = SubResource( 10 )
states/ShootArrow/position = Vector2( -1047, -113 )
transitions = [ "Idle", "Run", SubResource( 11 ), "Run", "Idle", SubResource( 12 ), "Idle", "ShootArrow", SubResource( 13 ), "ShootArrow", "Idle", SubResource( 14 ), "Idle", "MeleLight", SubResource( 18 ), "MeleLight", "Idle", SubResource( 19 ) ]
start_node = "Idle"
graph_offset = Vector2( -1487, -248 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CursorPlayer" type="Sprite" parent="."]
modulate = Color( 0.643137, 0.396078, 0.0823529, 0.376471 )
position = Vector2( 7.10543e-15, 10 )
scale = Vector2( 0.922201, 0.922201 )
texture = ExtResource( 5 )

[node name="ShadowPlayer" type="Sprite" parent="."]
position = Vector2( 0, 12.9381 )
scale = Vector2( 0.801796, 0.551796 )
texture = ExtResource( 4 )

[node name="SpritePlayer" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
flip_h = true
vframes = 11
hframes = 12

[node name="ArrowSpawnPosition" type="Position2D" parent="SpritePlayer"]
position = Vector2( 0, 14 )

[node name="PlayerTurn" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/MeleLight = SubResource( 3 )
anims/RangedHeavy = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/ShootArrow = SubResource( 6 )
anims/Skip = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 16 )
parameters/conditions/isIdle = false
parameters/conditions/isRunning = false
parameters/conditions/shootArrow = false
